grid headers hide overflow correctly
now if the header is too small, the text has an ellipsis.

fixes DAQ-250

--- a/src/widgets/grid/grid.css
+++ b/src/widgets/grid/grid.css
@@ -108,3 +108,7 @@ body.dragging-element .grid.standard table.grid tbody tr:hover:nth-child(odd) {
 .grid table.grid thead th.sort-desc .asc-arrow {
   display: none;
 }
+.grid table.grid thead th .buffer {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
